css/style.css
*,
*:before,
*:after {
	box-sizing: inherit;
}

body {
	background-color: #B2D732;
}

main {
	color: #202020;
}

header {
	background-color: #2E6C85;
	width: 100%;
}

header img {
	position: absolute;
	top: 10px;
	right: 10%;
	z-index: 5;
	width: auto;
	max-width: 15vw;
	height: auto;
}

footer {
	text-align: center;
	background-color: #092834;
	/* color: #B2; */
	color: #B2D732;
	clear: both;
}

footer h2 {
	color: #B2D732
}

h1 {
	font-family: 'Love Ya Like A Sister', cursive;
	/* font-size: 5 vw; */
	font-size: 5vw;
	color: #B2D732;
	text-align: center;
	text-shadow: 3px 2px 5px #202020;
	padding: 2vw;
	margin: 0px;
}

h2,
h4,
h5 {
	color: #C04402;
	font-family: 'Architects Daughter', cursive;
	margin-top: 1em;
}

h3 {
	color: #2E6C85;
	margin-top: 1em;
}

p {
	font-family: Arial, Helvetica, sans-serif;
	/* line-height: 1.35me; */
	line-height: 1.35em;
	margin-top: 1em;
}

ol {
	margin-left: 2em;
	line-height: 1.5em;
}

.accent1 {
	background-color: #C04402;
	color: whitesmoke;
}

.accent2 {
	color: #B2D732;
}

.error {
	/* color: #FE27122; */
	color: #FE2712;
}

a {
	color: #092834;
}

a:hover {
	color: #2E6C85;
	/* text-decoration: all; */
	text-decoration: none;
}

a:visited {
	color: #FE2712;
	text-decoration: none;
}

